--- a/index.scss
+++ b/index.scss
@@ -1,19 +1,337 @@
+img {
+  background: transparent;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: inherit;
-    color: inherit;
-    letter-spacing: inherit;
-    list-style: none;
-    -webkit-font-smoothing: subpixel-antialiased; }
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: inherit;
+  color: inherit;
+  letter-spacing: inherit;
+  list-style: none;
+}
+
+body {
+  font-size: 16px;
+  position: relative;
+  letter-spacing: 0.05em;
+  font-family: 'Happy Monkey', cursive;
+  height: 100vh;
+}
+
+#section0 {
   
-  body {
-    height: 100vh;
-    width: 100%;
-    font-size: 16px;
-    position: relative;
-    letter-spacing: 0.05em;
-    //font-family: 'Happy Monkey', cursive; 
+}
+
+.selector-div {
+  position: relative;
+  position: absolute;
+  top: 65%;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 500px;
+  cursor: pointer;
+}
+
+.landing {
+  text-align: center;
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+}
+
+.landing-text {
+  position: relative;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  text-align: center;
+  display: block;
+  width: 100%;
+  height: 500px;
+  margin-top: -125px;
+  cursor: default;
+}
+
+.site-title {
+  text-transform: uppercase;
+  font-size: 4em;
+  line-height: 1em;
+  cursor: default;
+  padding-left: 200px;
+  padding-right: 200px;
+  color: black;
+}
+
+.contact-home {
+  a {
+    text-decoration: none;
+    text-decoration: none;
+
+    i {
+      padding-right: 12px;
+      padding-left: 9px;
+    }
+  }
+
+  text-transform: none;
+  text-shadow: none;
+  font-weight: normal;
+  font-size: 0.2em;
+  line-height: 1.5em;
+  color: #fff;
+
+  button {
+    background-color: black;
+
+    i {
+      padding-right: 10px;
+      padding-left: 7px;
+    }
+
+    &:hover {
+      background-color: white;
+      color: black;
+      border-radius: 2px;
+      cursor: pointer;
+    }
+  }
+}
+
+.sub-site-title {
+  text-transform: uppercase;
+  font-style: italic;
+  font-size: .5em;
+  text-shadow: 1px 1px 0px black;
+  line-height: 1.8em;
+  color: #fff;
+}
+
+.scroll-button-entry {
+  position: absolute;
+  bottom: 5.3%;
+  width: 24px;
+  height: 24px;
+  border-left: 4px solid #585858;
+  border-bottom: 4px solid #585858;
+  -webkit-transform: rotateZ(-45deg);
+  transform: rotateZ(-45deg);
+  animation: moveButton 3.0s infinite;
+}
+
+.button {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-left: 2px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+  -webkit-transform: rotateZ(-45deg);
+  transform: rotateZ(-45deg);
+  animation: moveButton 3.0s infinite;
+  cursor: pointer;
+}
+
+.buttons {
+  z-index: 2;
+  position: absolute;
+  bottom: 40px;
+  left: 0px;
+  width: 100%;
+  text-align: center;
+}
+
+.scrolling-title {
+  position: absolute;
+  bottom: 65px;
+  width: 100%;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 1em;
+  cursor: pointer;
+}
+
+#section1 {
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(#0f3150 0, #000 90%);
+
+  .flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .flex-item {
+    padding: 15px;
+    width: 100px;
+    height: 100px;
+    margin-top: 35px;
+    color: white;
+    font-weight: bold;
+    font-size: 5em;
+    text-align: center;
+    align-items: center;
+
+    p {
+      font-size: .3em;
+    }
+  }
+}
+
+#section2 {
+  background: radial-gradient(#0f3150 0, #000 90%);
+  width: 100%;
+  height: 100%;
+
+  #entries {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .separator-container, .img-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .separator {
+    height: 2px;
+    width: 300px;
+    background-color: white;
+  }
+
+  .entry-row {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .entry {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 300px;
+    padding: 25px;
+
+    > {
+      h2 {
+        font-weight: bolder;
+        font-size: 2em;
+        color: #484848;
+        text-align: center;
+        color: white;
+      }
+
+      p {
+        font-weight: lighter;
+        font-size: 1em;
+        color: #484848;
+        margin-top: 15px;
+        text-align: justify;
+        color: white;
+        padding: 45px;
+        padding-top: 10px;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .site-title {
+    font-size: 3em;
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 600px) {
+  .site-title {
+    font-size: 2em;
+    margin-top: 50px;
+  }
+}
+
+@media (max-width: 950px) {
+  #section2 .img-entry {
+    display: none;
+  }
+}
+
+@keyframes animationTitle {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.landing-text {
+  animation: animationTitle 2s linear;
+}
+
+@keyframes display {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 100%;
+  }
+}
+
+.buttons, .scrolling-title {
+  animation: display 6s forwards;
+}
+
+#fp-nav ul li a span, .fp-slidesNav ul li a span {
+  background: white !important;
+}
+
+@keyframes menuAnimation {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+#fp-nav ul {
+  opacity: 1;
+} 
+
+.section {
+  height: 100vh;
+  width: 100%;
+}
+
+#section1 {
+  background-color: red;
+}
+
+.display_image_bottom_corner {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 700px;
+  height: 600px;
+  background-image: url("/images/bottom-image.png");
+}
+
+.display_image_top_corner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1500px;
+  height: 1500px;
+  margin-left: -1000px;
+  margin-top: -700px;
+  background-image: url("/images/top-image.png");
+  background-repeat: no-repeat;
 }
