--- a/index.scss
+++ b/index.scss
@@ -2,6 +2,8 @@ img {
   background: transparent;
 }
 
+$grayColor: #585858;
+
 * {
   margin: 0;
   padding: 0;
@@ -155,7 +157,7 @@ body {
 }
 
 #section1 {
-  width: 100%;
+  width: 90%;
   height: 100%;
   background: radial-gradient(#0f3150 0, #000 90%);
 
@@ -183,13 +185,16 @@ body {
 }
 
 #section2 {
-  background: radial-gradient(#0f3150 0, #000 90%);
+
+  margin-top: 100px;
   width: 100%;
   height: 100%;
 
   #entries {
     display: flex;
     flex-direction: column;
+    margin-left: 250px;
+    margin-right: 250px;
   }
 
   .separator-container, .img-container {
@@ -200,7 +205,7 @@ body {
   .separator {
     height: 2px;
     width: 300px;
-    background-color: white;
+    background-color: grayColor;
   }
 
   .entry-row {
@@ -214,30 +219,42 @@ body {
     flex-direction: column;
     justify-content: center;
     min-height: 300px;
-    padding: 25px;
-
+    padding: 50px;
+    margin-bottom: 100px;
     > {
       h2 {
         font-weight: bolder;
-        font-size: 2em;
+        font-size: 3em;
         color: #484848;
         text-align: center;
-        color: white;
+        color: black;
+        letter-spacing: .006em;
+        font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+        //padding-right: 200px;
       }
 
       p {
+        //padding-right: 200px;
         font-weight: lighter;
         font-size: 1em;
         color: #484848;
         margin-top: 15px;
-        text-align: justify;
-        color: white;
-        padding: 45px;
+        color: $grayColor;
         padding-top: 10px;
         text-align: center;
+        font-size: 22px;
+        line-height: 1.45455;
+        font-weight: 300;
+        letter-spacing: .016em;
+        font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+        text-align: justify;
       }
     }
   }
+}
+
+.entry img-entry {
+  
 }
 
 @media (max-width: 992px) {
