--- a/index.scss
+++ b/index.scss
@@ -37,7 +37,7 @@ body {
   left: 0;
   display: block;
   width: 100%;
-  height: 500px;
+  //height: 500px;
   cursor: pointer;
 }
 
@@ -63,7 +63,6 @@ body {
 }
 
 .site-title {
-  text-transform: uppercase;
   font-size: 3.6em;
   line-height: 1.2em;
   cursor: default;
@@ -107,6 +106,21 @@ body {
       cursor: pointer;
     }
   }
+}
+
+.flex-item {
+  padding: 2rem;
+  width: 400px;
+  margin: 0.5rem;
+  //margin-top: 10px;
+  font-weight: bold;
+  line-height: 0px;
+  font-size: 3em;
+  text-align: center;
+  box-shadow:  0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8;
+  border-radius: 10px;
+  flex-direction: column;
+  height: 7em;  
 }
 
 .sub-site-title {
@@ -497,9 +511,14 @@ p {
   #section2 .entry {
     padding: 10px;
   }
+
+  #section2 .entry > p { 
+    font-size: 1.2em;
+  }
 }
 
 @media all and (max-width: 1200px) {
+
   .navigation {
     //justify-content: space-around;
     display: none;
@@ -538,6 +557,16 @@ p {
 
 
 @media all and (max-width: 800px) {
+
+  .flex-item {
+    width: 100%;
+  }
+
+  .row { 
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
   .display_image_top_corner {
     width: 700px;
     height: 750px;
@@ -573,6 +602,7 @@ p {
 }
 
 @media all and (max-width: 600px) {
+  
   .display_image_bottom_corner {
       width: 500px;
       height: 600px;
@@ -599,7 +629,7 @@ p {
   }
 
   .flex-item h2 {
-    line-height: 0 !important;
+    //line-height: 0 !important;
     margin-top: 5%;
   }
 
@@ -678,19 +708,6 @@ p {
 
 }
 
-.flex-item {
-  padding: 2rem;
-  width: 400px;
-  //margin-top: 10px;
-  font-weight: bold;
-  line-height: 0px;
-  font-size: 3em;
-  text-align: center;
-  box-shadow:  0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8;
-  border-radius: 10px;
-  flex-direction: column;
-  height: 7em;  
-}
 
 .flex-item p {
   margin: 0;
@@ -722,5 +739,44 @@ p {
 }
 
 .text-title {
-  height: 11rem;
+  height: 12rem;
 }
+
+#section3 .entry-row .entry p {
+  font-size: 1.2em;
+}
+
+@media all and (max-width: 300px) {
+  .flex-item h2 {
+    line-height: 20px;
+    font-size: 0.3em;
+  }
+
+  .flex-item p {
+    font-size: 0.20em;
+  }
+
+  #section2 .entry > p, h2 { 
+    font-size: 0.8em;
+  }
+ }
+
+ @media all and (max-width: 950px) {  
+   .row { 
+     flex-direction: column;
+   }
+ }
+
+ //.row
+
+@media all and (max-width: 950px) { 
+  #section2 .entry {
+    min-height: 200px;
+  }
+  #section2 .entry > p, h2 { 
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+
+/*.text-title*/
